--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "react-elastic-carousel": "^0.11.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
