--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "dev": "npm install && concurrently \"npm run server\" \"npm run client\" "
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/syedshamsher/shopping-app#readme",
   "dependencies": {
     "axios": "0.21.1",
+    "backend": "^0.0.0",
     "bcryptjs": "2.4.3",
     "concurrently": "5.3.0",
     "cors": "2.8.5",
@@ -34,13 +35,12 @@
     "node-modules": "0.0.1",
     "nodemailer": "6.4.17",
     "razorpay": "2.0.6",
-    "react-redux": "7.2.2",
-    "react-router-dom": "5.2.0",
     "redis": "3.0.2",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
     "request": "2.88.2",
     "response-time": "2.3.2",
+    "shopping-app": "file:backend",
     "uuid": "8.3.2"
   }
 }
