--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm install && cd backend && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon backend/server",
-    "client": "npm start --prefix frontend",
+    "client": "npm build --prefix frontend",
     "dev": "npm install && concurrently \"npm run server\" \"npm run client\" "
   },
   "repository": {
