--- a/package.json
+++ b/package.json
@@ -41,6 +41,22 @@
     "request": "2.88.2",
     "response-time": "2.3.2",
     "shopping-app": "file:backend",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@testing-library/jest-dom": "^5.11.8",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.0",
+    "frontend": "file:",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.11.0",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.1",
+    "styled-components": "^5.2.1",
+    "web-vitals": "^0.2.4",
+    "nodemon": "^2.0.12"
   }
 }
