--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm install && cd backend && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon backend/server",
-    "client": "npm run build --prefix frontend",
+    "client": "npm build --prefix frontend",
     "dev": "npm install && concurrently \"npm run server\" \"npm run client\" "
   },
   "repository": {
@@ -22,32 +22,15 @@
   },
   "homepage": "https://github.com/syedshamsher/shopping-app#readme",
   "dependencies": {
-    "axios": "0.21.1",
     "backend": "^0.0.0",
-    "bcryptjs": "2.4.3",
-    "concurrently": "5.3.0",
-    "cors": "2.8.5",
-    "dotenv": "8.2.0",
-    "express": "4.17.1",
-    "joi": "17.3.0",
-    "jsonwebtoken": "8.5.1",
-    "mongoose": "5.11.12",
-    "node-modules": "0.0.1",
-    "nodemailer": "6.4.17",
-    "razorpay": "2.0.6",
-    "redis": "3.0.2",
-    "redux": "4.0.5",
-    "redux-thunk": "2.3.0",
-    "request": "2.88.2",
-    "response-time": "2.3.2",
     "shopping-app": "file:backend",
-    "uuid": "8.3.2",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
     "frontend": "file:",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -55,8 +38,25 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.12",
+    "node-modules": "^0.0.1",
+    "nodemailer": "^6.4.17",
+    "razorpay": "^2.0.6",
+    "redis": "^3.0.2",
+    "request": "^2.88.2",
+    "response-time": "^2.3.2"
   }
 }
