updated prod script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon backend/server",
     "client": "npm run start --prefix frontend",
-    "dev": "npm install && concurrently \"npm run server\" \"npm run client\" "
+    "client-prod": "npm run build --prefix frontend",
+    "dev": "npm install && concurrently \"npm run server\" \"npm run client\" ",
+    "prod": "npm install && concurrently \"npm run server\" \"npm run client\" "
   },
   "repository": {
     "type": "git",
